Mod DatasetGeneration.ipynb, data augmentation prototype

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -28,7 +28,8 @@
     "import time\n",
     "import os\n",
     "import uuid\n",
-    "from IPython.display import clear_output"
+    "from IPython.display import clear_output\n",
+    "import random"
    ]
   },
   {
@@ -52,13 +53,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a5c6191b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ['LeftL', 'LeftA', 'LeftO', 'LeftV', 'LeftOpenHand', 'RIndexUp', 'RIndexDown', 'RIndexLeft', 'RIndexRight', 'RIndexFront', 'RThumbBack', 'RClearC']\n",
-    "nImages = 20"
+    "labels = ['LeftL'] #, 'LeftA', 'LeftO', 'LeftV', 'LeftOpenHand', 'RIndexUp', 'RIndexDown', 'RIndexLeft', 'RIndexRight', 'RIndexFront', 'RThumbBack', 'RClearC']\n",
+    "nImages = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "426de088",
+   "metadata": {},
+   "source": [
+    "We define some data aumentation functions to produce multiple output images from a single input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b68a621b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vertical_shift(img, ratio=0.1):\n",
+    "    if ratio > 1 or ratio < 0:\n",
+    "        print('Value should be less than 1 and greater than 0')\n",
+    "        return img\n",
+    "    ratio = random.uniform(-ratio, ratio)\n",
+    "    h, w = img.shape[:2]\n",
+    "    to_shift = h*ratio\n",
+    "    if ratio > 0:\n",
+    "        img = img[:int(h-to_shift), :, :]\n",
+    "    if ratio < 0:\n",
+    "        img = img[int(-1*to_shift):, :, :]\n",
+    "    img = cv2.resize(img, (h, w), cv2.INTER_CUBIC)\n",
+    "    return img\n",
+    "\n",
+    "def horizontal_shift(img, ratio=0.1):\n",
+    "    if ratio > 1 or ratio < 0:\n",
+    "        print('Value should be less than 1 and greater than 0')\n",
+    "        return img\n",
+    "    ratio = random.uniform(-ratio, ratio)\n",
+    "    h, w = img.shape[:2]\n",
+    "    to_shift = w*ratio\n",
+    "    if ratio > 0:\n",
+    "        img = img[:, :int(w-to_shift), :]\n",
+    "    if ratio < 0:\n",
+    "        img = img[:, int(-1*to_shift):, :]\n",
+    "    img = cv2.resize(img, (h, w), cv2.INTER_CUBIC)\n",
+    "    return img\n",
+    "\n",
+    "def zoom(img, value=0.9):\n",
+    "    if value > 1 or value < 0:\n",
+    "        print('Value for zoom should be less than 1 and greater than 0')\n",
+    "        return img\n",
+    "    value = random.uniform(value, 1)\n",
+    "    h, w = img.shape[:2]\n",
+    "    h_taken = int(value*h)\n",
+    "    w_taken = int(value*w)\n",
+    "    h_start = random.randint(0, h-h_taken)\n",
+    "    w_start = random.randint(0, w-w_taken)\n",
+    "    img = img[h_start:h_start+h_taken, w_start:w_start+w_taken, :]\n",
+    "    img = cv2.resize(img, (h, w), cv2.INTER_CUBIC)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77d9a897",
+   "metadata": {},
+   "source": [
+    "The following code box will warn you about which gesture must be performed. The delay between each frame capture is of 2 seconds, but can be freely adjusted to whatever you need.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ba14767d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting images for LeftL\n",
+      "Collected\n",
+      "Collected\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame_capture_delay = 2 #seconds\n",
+    "for label in labels:\n",
+    "    !mkdir {'Tensorflow\\Workspace\\images\\capturedimages\\\\' + label}\n",
+    "    clear_output(wait=True)\n",
+    "    print('Collecting images for {}'.format(label))\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "    input()\n",
+    "    time.sleep(5)\n",
+    "    for imageNumber in range(nImages):\n",
+    "        ret, frame = cap.read()\n",
+    "        tmpUUID = format(str(uuid.uuid1()))\n",
+    "        imageName = os.path.join(imagePath, label, label+'_'+f'{tmpUUID}.jpg')\n",
+    "        cv2.imwrite(imageName, frame)\n",
+    "        print('Collected')\n",
+    "        cv2.imshow('frame', frame)\n",
+    "        cv2.imwrite(os.path.join(imagePath, label, label+'_vshift_'+f'{tmpUUID}.jpg'),\n",
+    "                    vertical_shift(img=frame.copy()))\n",
+    "        cv2.imwrite(os.path.join(imagePath, label, label+'_hshift_'+f'{tmpUUID}.jpg'),\n",
+    "                    horizontal_shift(img=frame.copy()))\n",
+    "        cv2.imwrite(os.path.join(imagePath, label, label+'_zoom_'+f'{tmpUUID}.jpg'),\n",
+    "                    zoom(img=frame.copy()))\n",
+    "        time.sleep(frame_capture_delay)\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            cv2.destroyWindow('frame')\n",
+    "            break\n",
+    "    cap.release()\n",
+    "cv2.destroyWindow('frame')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1f3d108",
+   "metadata": {},
+   "source": [
+    "At the end of this step, go into your _capturedimages_ directory.  \n",
+    "Move all the images in the automatically generated sub-directories of each class together into the _capturedimages_ directory: this will simplify the labeling procedure later."
    ]
   }
  ],
@@ -78,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
