--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "a5c6191b",
    "metadata": {},
    "outputs": [],
    "source": [
     "labels = ['LeftL'] #, 'LeftA', 'LeftO', 'LeftV', 'LeftOpenHand', 'RIndexUp', 'RIndexDown', 'RIndexLeft', 'RIndexRight', 'RIndexFront', 'RThumbBack', 'RClearC']\n",
-    "nImages = 2"
+    "nImages = 1"
    ]
   },
   {
@@ -72,15 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "b68a621b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vertical_shift(img, ratio=0.1):\n",
+    "def vertical_shift(input_img, ratio=0.2):\n",
     "    if ratio > 1 or ratio < 0:\n",
     "        print('Value should be less than 1 and greater than 0')\n",
-    "        return img\n",
+    "        return input_img\n",
+    "    img = input_img.copy()\n",
     "    ratio = random.uniform(-ratio, ratio)\n",
     "    h, w = img.shape[:2]\n",
     "    to_shift = h*ratio\n",
@@ -88,13 +89,14 @@
     "        img = img[:int(h-to_shift), :, :]\n",
     "    if ratio < 0:\n",
     "        img = img[int(-1*to_shift):, :, :]\n",
-    "    img = cv2.resize(img, (h, w), cv2.INTER_CUBIC)\n",
+    "    img = cv2.resize(img, (w, h), cv2.INTER_CUBIC)\n",
     "    return img\n",
     "\n",
-    "def horizontal_shift(img, ratio=0.1):\n",
+    "def horizontal_shift(input_img, ratio=0.2):\n",
     "    if ratio > 1 or ratio < 0:\n",
     "        print('Value should be less than 1 and greater than 0')\n",
-    "        return img\n",
+    "        return input_img\n",
+    "    img = input_img.copy()\n",
     "    ratio = random.uniform(-ratio, ratio)\n",
     "    h, w = img.shape[:2]\n",
     "    to_shift = w*ratio\n",
@@ -102,13 +104,14 @@
     "        img = img[:, :int(w-to_shift), :]\n",
     "    if ratio < 0:\n",
     "        img = img[:, int(-1*to_shift):, :]\n",
-    "    img = cv2.resize(img, (h, w), cv2.INTER_CUBIC)\n",
+    "    img = cv2.resize(img, (w, h), cv2.INTER_CUBIC)\n",
     "    return img\n",
     "\n",
-    "def zoom(img, value=0.9):\n",
+    "def zoom(input_img, value=0.85):\n",
     "    if value > 1 or value < 0:\n",
     "        print('Value for zoom should be less than 1 and greater than 0')\n",
-    "        return img\n",
+    "        return input_img\n",
+    "    img = input_img.copy()\n",
     "    value = random.uniform(value, 1)\n",
     "    h, w = img.shape[:2]\n",
     "    h_taken = int(value*h)\n",
@@ -116,7 +119,7 @@
     "    h_start = random.randint(0, h-h_taken)\n",
     "    w_start = random.randint(0, w-w_taken)\n",
     "    img = img[h_start:h_start+h_taken, w_start:w_start+w_taken, :]\n",
-    "    img = cv2.resize(img, (h, w), cv2.INTER_CUBIC)\n",
+    "    img = cv2.resize(img, (w, h), cv2.INTER_CUBIC)\n",
     "    return img"
    ]
   },
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "ba14767d",
    "metadata": {},
    "outputs": [
@@ -139,7 +142,6 @@
      "output_type": "stream",
      "text": [
       "Collecting images for LeftL\n",
-      "Collected\n",
       "Collected\n"
      ]
     }
@@ -161,11 +163,11 @@
     "        print('Collected')\n",
     "        cv2.imshow('frame', frame)\n",
     "        cv2.imwrite(os.path.join(imagePath, label, label+'_vshift_'+f'{tmpUUID}.jpg'),\n",
-    "                    vertical_shift(img=frame.copy()))\n",
+    "                    vertical_shift(input_img=frame))\n",
     "        cv2.imwrite(os.path.join(imagePath, label, label+'_hshift_'+f'{tmpUUID}.jpg'),\n",
-    "                    horizontal_shift(img=frame.copy()))\n",
+    "                    horizontal_shift(input_img=frame))\n",
     "        cv2.imwrite(os.path.join(imagePath, label, label+'_zoom_'+f'{tmpUUID}.jpg'),\n",
-    "                    zoom(img=frame.copy()))\n",
+    "                    zoom(input_img=frame))\n",
     "        time.sleep(frame_capture_delay)\n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "            cv2.destroyWindow('frame')\n",
