Mod DatasetGeneration.ipynb, renamed some directories

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -14,12 +14,12 @@
    "metadata": {},
    "source": [
     "First, we add all the useful dependencies for image collection and processing.  \n",
-    "Be sure to be in the root directory of the project."
+    "Be sure to be in the root directory of the project when executiong the following code cells."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "7f1df295",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,16 @@
     "import os\n",
     "import uuid\n",
     "from IPython.display import clear_output\n",
-    "import random"
+    "import random\n",
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8dea5dd",
+   "metadata": {},
+   "source": [
+    "We then define the path of the directory into which we will save and manipulate our dataset.  "
    ]
   },
   {
@@ -48,18 +57,18 @@
    "metadata": {},
    "source": [
     "Now we define the list of gesture classes _labels_, which will be used to generate data for the model to train onto.  \n",
-    "The _nImages_ variable specifies how many images of a single gesture shall be taken: the higher, the better variance you'll get in the final dataset. However, be warned that all the images for the dataset must be labeled manually, so choose wisely. We will exploit data augmentation to generate a bigger dataset with more variance, hopefully improving the final model's generalization capabilities.  "
+    "The _nImages_ variable specifies how many images of a single gesture shall be taken: the higher, the better variance you'll get in the final dataset. However, be warned that all the images for the dataset must be labeled manually, so choose wisely. We will exploit data augmentation to generate a bigger dataset with more variance, in order to improve the final model's generalization capabilities.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "a5c6191b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ['LeftL'] #, 'LeftA', 'LeftO', 'LeftV', 'LeftOpenHand', 'RIndexUp', 'RIndexDown', 'RIndexLeft', 'RIndexRight', 'RIndexFront', 'RThumbBack', 'RClearC']\n",
-    "nImages = 1"
+    "labels = ['LeftL', 'LeftA', 'LeftO', 'LeftV', 'LeftOpenHand', 'RIndexUp', 'RIndexDown', 'RIndexLeft', 'RIndexRight', 'RIndexFront', 'RThumbBack', 'RClearC']\n",
+    "nImages = 25"
    ]
   },
   {
@@ -67,12 +76,14 @@
    "id": "426de088",
    "metadata": {},
    "source": [
-    "We define some data aumentation functions to produce multiple output images from a single input."
+    "We define some data aumentation functions to produce multiple output images from a single input.  \n",
+    "Since the gestures we want to recognize are hand-bound, since there are gestures exclusive to the right or left hand, we cannot perform horizontal mirroring. Vertical mirroring and rotations dont't make any sense in this case, since all the gestures are direction bound, so such transformations could make two different classes overlap with each other.  \n",
+    "The only useful data augmentation procedures we can exploit are thus vertical and horizontal shifts (or stretchs) and zoom transformations.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "b68a621b",
    "metadata": {},
    "outputs": [],
@@ -128,12 +139,13 @@
    "id": "77d9a897",
    "metadata": {},
    "source": [
-    "The following code box will warn you about which gesture must be performed. The delay between each frame capture is of 2 seconds, but can be freely adjusted to whatever you need.  "
+    "The following code box will warn you about which gesture must be performed. The delay between each frame capture is of 2 seconds, but can be freely adjusted to whatever you need.  \n",
+    "Before the start of the capturing procedure for each class, the user is prompted to press Enter in an input box, to improve usability and provide mid-capture pause scenarios.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ba14767d",
    "metadata": {},
    "outputs": [
@@ -141,7 +153,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting images for LeftL\n",
+      "Collecting images for RIndexRight\n",
+      "Collected\n",
+      "Collected\n",
       "Collected\n"
      ]
     }
@@ -154,7 +168,6 @@
     "    print('Collecting images for {}'.format(label))\n",
     "    cap = cv2.VideoCapture(0)\n",
     "    input()\n",
-    "    time.sleep(5)\n",
     "    for imageNumber in range(nImages):\n",
     "        ret, frame = cap.read()\n",
     "        tmpUUID = format(str(uuid.uuid1()))\n",
@@ -181,8 +194,97 @@
    "id": "f1f3d108",
    "metadata": {},
    "source": [
-    "At the end of this step, go into your _capturedimages_ directory.  \n",
-    "Move all the images in the automatically generated sub-directories of each class together into the _capturedimages_ directory: this will simplify the labeling procedure later."
+    "At the end of the capture step, go into the _capturedimages_ directory.  \n",
+    "Check all the sub-directories generated output images, to ensure that all of them contain well structured data: if not, repeat the capture process by specifying only the number of images and classes you need to replace.  \n",
+    "\n",
+    "The following cell will then move all the images from the class sub-directories to the _capturedimages_ directory.  \n",
+    "If you redefined the _labels_ list to capture some extra images, be sure to redefine the _labels_ list before executing the following cell, so that all files get correctly moved."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "01e827eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label in labels:\n",
+    "    source_dir = imagePath + f\"/{label}/\"\n",
+    "    file_names = os.listdir(source_dir)\n",
+    "    for file_name in file_names:\n",
+    "        # Remove comment for verbose output\n",
+    "        #print(f\"Moving {file_name} from {source_dir} to {imagePath}\")\n",
+    "        shutil.move(os.path.join(source_dir, file_name), imagePath)\n",
+    "    os.rmdir(source_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d330a2c7",
+   "metadata": {},
+   "source": [
+    "# Dataset labeling\n",
+    "\n",
+    "All commands must be run from the root directory of the project, unless otherwise stated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c21b772",
+   "metadata": {},
+   "source": [
+    "## Path setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8e9d5328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WORKSPACE_PATH = 'Tensorflow/Workspace'\n",
+    "SCRIPTS_PATH = 'Tensorflow/ConversionScripts'\n",
+    "APIMODEL_PATH = 'Tensorflow/models'\n",
+    "ANNOTATION_PATH = WORKSPACE_PATH+'/annotations'\n",
+    "IMAGE_PATH = WORKSPACE_PATH+'/images'\n",
+    "MODEL_PATH = WORKSPACE_PATH+'/trained-models'\n",
+    "PRETRAINED_MODEL_PATH = WORKSPACE_PATH+'/pre-trained-model'\n",
+    "CONFIG_PATH = MODEL_PATH+'/custom_trained_model/pipeline.config'\n",
+    "CHECKPOINT_PATH = MODEL_PATH+'/custom_trained_model/'\n",
+    "CUSTOM_MODEL_NAME = 'custom_trained_model' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aab12ba0",
+   "metadata": {},
+   "source": [
+    "The label map hereby generated contains all classes we want to train our model onto and assigns an integer id to each one.  \n",
+    "The map can be modified in order to account for number of different labels, just be sure that it features exactly the same classes previously defined in the _labels_ list.  \n",
+    "The code box down below will generate the _label_map.pbtxt_ file.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "bea0b475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir \"{ANNOTATION_PATH}\"\n",
+    "label_map = []\n",
+    "id = 1\n",
+    "for label in labels:\n",
+    "    label_map.append({'name':f\"{label}\", 'id':f\"{id}\"})\n",
+    "    id = id + 1\n",
+    "\n",
+    "with open(ANNOTATION_PATH + '\\label_map.pbtxt', 'w') as f:\n",
+    "    for entry in label_map:\n",
+    "        f.write('item { \\n')\n",
+    "        f.write('\\tname:\\'{}\\'\\n'.format(entry['name']))\n",
+    "        f.write('\\tid:{}\\n'.format(entry['id']))\n",
+    "        f.write('}\\n')"
    ]
   }
  ],
