Added labeling step, labeled the whole (still hidden) dataset

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "7f1df295",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "b68a621b",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "ba14767d",
    "metadata": {},
    "outputs": [
@@ -153,9 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting images for RIndexRight\n",
-      "Collected\n",
-      "Collected\n",
+      "Collecting images for RClearC\n",
       "Collected\n"
      ]
     }
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "8e9d5328",
    "metadata": {},
    "outputs": [],
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "bea0b475",
    "metadata": {},
    "outputs": [],
@@ -285,6 +283,45 @@
     "        f.write('\\tname:\\'{}\\'\\n'.format(entry['name']))\n",
     "        f.write('\\tid:{}\\n'.format(entry['id']))\n",
     "        f.write('}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb01e918",
+   "metadata": {},
+   "source": [
+    "## Label images with LabelImg\n",
+    "\n",
+    "The follwing code cell moves the notebook's shell to the LabelImg directory and runs LabelImg.  \n",
+    "\n",
+    "In the LabelImg instance that just opened, be sure to check in the upper left menu _View->Auto Save Mode_.  \n",
+    "Click onto _Open Dir_ on the left vertical menu bar and select the _collected images_ directory, then _Select directory_.  \n",
+    "Click onto _Change Save Dir_ on the left menu bar and select the _collected images_ directory, then _Select directory_.  \n",
+    "\n",
+    "You should now see all the images you previously captured.  \n",
+    "Use _w_ to activate the draw bounding box utility and select the gesture in the image, confirming by clicking with the left mouse button. A small input window will open, asking you to assign a name to the object class for the bounding box you just drew: for consistency's sake, we used the same names as for the _labels_ list.  \n",
+    "Repeat the process until all the images have been labeled with exactly one label. It's possible to specify multiple bounding boxes for multiple elements in a single image, however this would make the dataset more complex to manage. Forthis reason, in this case, each dataset entry will contain one single gesture.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63beb3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd \"labelImg\"\n",
+    "!pyrcc5 -o libs/resources.py resources.qrc # Solves \"No module named 'libs.resources'\" bug, if present\n",
+    "!python labelImg.py\n",
+    "%cd \"..\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ecd828c",
+   "metadata": {},
+   "source": [
+    "## Generate Tensorflow .record files"
    ]
   }
  ],
