Added dataset split and .record file generation

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -14,12 +14,13 @@
    "metadata": {},
    "source": [
     "First, we add all the useful dependencies for image collection and processing.  \n",
-    "Be sure to be in the root directory of the project when executiong the following code cells."
+    "Be sure to be in the root directory of the project when executiong the following code cells.  \n",
+    "If any of the following imports fail, be sure to install the missing libraries through oyur package manager. I suggest _pip install <library\\_name>_.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "7f1df295",
    "metadata": {},
    "outputs": [],
@@ -30,7 +31,8 @@
     "import uuid\n",
     "from IPython.display import clear_output\n",
     "import random\n",
-    "import shutil"
+    "import shutil\n",
+    "import wget"
    ]
   },
   {
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "a5c6191b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "b68a621b",
    "metadata": {},
    "outputs": [],
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "ba14767d",
    "metadata": {},
    "outputs": [
@@ -153,8 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting images for RClearC\n",
-      "Collected\n"
+      "Collecting images for LeftA\n"
      ]
     }
    ],
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "01e827eb",
    "metadata": {},
    "outputs": [],
@@ -236,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8e9d5328",
    "metadata": {},
    "outputs": [],
    "source": [
     "WORKSPACE_PATH = 'Tensorflow/Workspace'\n",
-    "SCRIPTS_PATH = 'Tensorflow/ConversionScripts'\n",
+    "SCRIPTS_PATH = 'Tensorflow/ConversionScript'\n",
     "APIMODEL_PATH = 'Tensorflow/models'\n",
     "ANNOTATION_PATH = WORKSPACE_PATH+'/annotations'\n",
     "IMAGE_PATH = WORKSPACE_PATH+'/images'\n",
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bea0b475",
    "metadata": {},
    "outputs": [],
@@ -321,8 +322,110 @@
    "id": "3ecd828c",
    "metadata": {},
    "source": [
-    "## Generate Tensorflow .record files"
+    "## Generate Tensorflow .record files\n",
+    "\n",
+    "First, we download the _generate\\_tfrecord.py_ script from the Tensorflow Object Detection API page.  \n",
+    "The script will index the Train and Test partitions of the dataset, such that the training script can find the files.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c912cc52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Tensorflow/ConversionScript/generate_tfrecord.py'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://tensorflow-object-detection-api-tutorial.readthedocs.io/en/latest/_downloads/da4babe668a8afb093cc7776d7e630f3/generate_tfrecord.py'\n",
+    "wget.download(url, out=SCRIPTS_PATH, bar=wget.bar_thermometer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e72e38e",
+   "metadata": {},
+   "source": [
+    "We then must split our dataset into a training and a test partition. Be sure to evenly distribute samples for each class among the two sets, or else the training may yield underfitting or overfitting problems.  \n",
+    "We will use 25% of the dataset for the test partition and the remaining 75% for the testing partition. Since we have 100 samples for each class, it amounts to 25 test samples for each class.  \n",
+    "We won't use a validation partition, since the original model's structure from which we are performing transfer learning doesn't support it.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "86d4e61d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_test_samples = 25\n",
+    "!mkdir \"{IMAGE_PATH + '/test'}\"\n",
+    "!mkdir \"{IMAGE_PATH + '/train'}\"\n",
+    "for label in labels:\n",
+    "    file_names = [file for file in os.listdir(imagePath)\n",
+    "                  if file.endswith(\"jpg\") if file.startswith(label + \"_\")]\n",
+    "    random.shuffle(file_names)\n",
+    "    index = 0\n",
+    "    for file_name in file_names:\n",
+    "        pre, ext = os.path.splitext(file_name)\n",
+    "        annotation_name = pre + \".xml\"\n",
+    "        if(index < number_test_samples):\n",
+    "            # Remove comment for verbose output\n",
+    "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/test'}\")\n",
+    "            shutil.copy(src=imagePath + \"/\" + file_name, dst=IMAGE_PATH + '/test')\n",
+    "            shutil.copy(src=imagePath + \"/\" + annotation_name, dst=IMAGE_PATH + '/test')\n",
+    "            #shutil.move(os.path.join(source_dir, file_name), imagePath)\n",
+    "        else:\n",
+    "            # Remove comment for verbose output\n",
+    "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/train'}\")\n",
+    "            shutil.copy(src=imagePath + \"/\" + file_name, dst=IMAGE_PATH + '/train')\n",
+    "            shutil.copy(src=imagePath + \"/\" + annotation_name, dst=IMAGE_PATH + '/train')\n",
+    "        index = index + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bc25b367",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully created the TFRecord file: Tensorflow/Workspace/annotations/train.record\n",
+      "Successfully created the TFRecord file: Tensorflow/Workspace/annotations/test.record\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
+    "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x{IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d678143d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
