Added model setup subsection

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -288,12 +288,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dc3b629",
+   "metadata": {},
+   "source": [
+    "## Clone submodules\n",
+    "\n",
+    "If you cloned this repository without using the _-recursive_ flag, run the following codebox to get both the _labelImg_ and the _Tensorflow Model Zoo_ submodules.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d39e3fd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git submodule init\n",
+    "!git submodule update"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb01e918",
    "metadata": {},
    "source": [
     "## Label images with LabelImg\n",
     "\n",
-    "The follwing code cell moves the notebook's shell to the LabelImg directory and runs LabelImg.  \n",
+    "The follwing code cell moves the notebook's shell to the LabelImg directory and runs LabelImg.    \n",
     "\n",
     "In the LabelImg instance that just opened, be sure to check in the upper left menu _View->Auto Save Mode_.  \n",
     "Click onto _Open Dir_ on the left vertical menu bar and select the _collected images_ directory, then _Select directory_.  \n",
@@ -306,15 +327,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "d63beb3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:\\PoliTO\\Machine Learning for Vision and Multimedia\\labelImg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Marzio\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\Scripts\\pyrcc5: File does not exist '#'\n"
+     ]
+    }
+   ],
    "source": [
     "%cd \"labelImg\"\n",
     "!pyrcc5 -o libs/resources.py resources.qrc # Solves \"No module named 'libs.resources'\" bug, if present\n",
-    "!python labelImg.py\n",
-    "%cd \"..\""
+    "!python labelImg.py"
    ]
   },
   {
@@ -330,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "c912cc52",
    "metadata": {},
    "outputs": [
@@ -347,7 +382,7 @@
        "'Tensorflow/ConversionScript/generate_tfrecord.py'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,12 +455,84 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d678143d",
+   "cell_type": "markdown",
+   "id": "c71c84bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Setup the transfer learning model\n",
+    "\n",
+    "Download, if not present, the _ssd\\_mobilenet\\_v2\\_fpnlite\\_320x320\\_coco17\\_tpu-8_ we'll later use for transfer learning.  \n",
+    "This can be done with the following code cell.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e2e140b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/checkpoint\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.index\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/saved_model.pb\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001\n",
+      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.index\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8.tar.gz'\n",
+    "wget.download(url, out=PRETRAINED_MODEL_PATH, bar=wget.bar_thermometer)\n",
+    "!cd {PRETRAINED_MODEL_PATH} && tar -zxvf ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc74f90d",
+   "metadata": {},
+   "source": [
+    "We will now copy the _pipeline.config_ file into the path to which our trained model will be saved to.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "20c4f3b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tensorflow/Workspace/trained-models/custom_trained_model\\\\pipeline.config'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source = PRETRAINED_MODEL_PATH + '/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config'\n",
+    "destination = MODEL_PATH + '/' + CUSTOM_MODEL_NAME\n",
+    "!mkdir \"{MODEL_PATH + '/' + CUSTOM_MODEL_NAME}\"\n",
+    "shutil.copy(src=source, dst=destination)"
+   ]
   }
  ],
  "metadata": {
