--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -222,9 +222,7 @@
    "id": "d330a2c7",
    "metadata": {},
    "source": [
-    "# Dataset labeling\n",
-    "\n",
-    "All commands must be run from the root directory of the project, unless otherwise stated."
+    "# Dataset labeling  "
    ]
   },
   {
@@ -232,7 +230,8 @@
    "id": "6c21b772",
    "metadata": {},
    "source": [
-    "## Path setup"
+    "All commands must be run from the root directory of the project, unless otherwise stated.  \n",
+    "As a first step, we will configure the environment variables for all the paths we are going to use.  "
    ]
   },
   {
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "id": "d63beb3e",
    "metadata": {},
    "outputs": [
@@ -335,6 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[WinError 2] Impossibile trovare il file specificato: 'labelImg'\n",
       "e:\\PoliTO\\Machine Learning for Vision and Multimedia\\labelImg\n"
      ]
     },
@@ -344,12 +344,20 @@
      "text": [
       "C:\\Users\\Marzio\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\Scripts\\pyrcc5: File does not exist '#'\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:\\PoliTO\\Machine Learning for Vision and Multimedia\n"
+     ]
     }
    ],
    "source": [
     "%cd \"labelImg\"\n",
     "!pyrcc5 -o libs/resources.py resources.qrc # Solves \"No module named 'libs.resources'\" bug, if present\n",
-    "!python labelImg.py"
+    "!python labelImg.py\n",
+    "%cd \"..\""
    ]
   },
   {
@@ -357,8 +365,14 @@
    "id": "3ecd828c",
    "metadata": {},
    "source": [
-    "## Generate Tensorflow .record files\n",
-    "\n",
+    "# Generate Tensorflow .record files  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ab337ea",
+   "metadata": {},
+   "source": [
     "First, we download the _generate\\_tfrecord.py_ script from the Tensorflow Object Detection API page.  \n",
     "The script will index the Train and Test partitions of the dataset, such that the training script can find the files.  "
    ]
@@ -459,8 +473,14 @@
    "id": "c71c84bb",
    "metadata": {},
    "source": [
-    "## Setup the transfer learning model\n",
-    "\n",
+    "# Setup the transfer learning model  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c26f06b",
+   "metadata": {},
+   "source": [
     "Download, if not present, the _ssd\\_mobilenet\\_v2\\_fpnlite\\_320x320\\_coco17\\_tpu-8_ we'll later use for transfer learning.  \n",
     "This can be done with the following code cell.  "
    ]
@@ -532,6 +552,137 @@
     "destination = MODEL_PATH + '/' + CUSTOM_MODEL_NAME\n",
     "!mkdir \"{MODEL_PATH + '/' + CUSTOM_MODEL_NAME}\"\n",
     "shutil.copy(src=source, dst=destination)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5596d914",
+   "metadata": {},
+   "source": [
+    "The _pipeline.config_ file must now be updated with the local paths, number of classes and other characteristics of our new model.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d212f928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from object_detection.utils import config_util\n",
+    "from object_detection.protos import pipeline_pb2\n",
+    "from google.protobuf import text_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "a52505aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG_PATH = MODEL_PATH + '/' + CUSTOM_MODEL_NAME + '/pipeline.config'\n",
+    "config = config_util.get_configs_from_pipeline_file(CONFIG_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "76d6ff5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_config = pipeline_pb2.TrainEvalPipelineConfig()\n",
+    "with tf.io.gfile.GFile(CONFIG_PATH, \"r\") as f:                                                                                                                                                                                                                     \n",
+    "    proto_str = f.read()                                                                                                                                                                                                                                          \n",
+    "    text_format.Merge(proto_str, pipeline_config)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f773e37",
+   "metadata": {},
+   "source": [
+    "At this point, be sure that the _pipeline_config.model.ssd.num_classes_ variable in the code box down here equals exactly the number of labels you previously specified. In our case it will be 12."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "8d172d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_config.model.ssd.num_classes = 12\n",
+    "pipeline_config.train_config.batch_size = 8\n",
+    "pipeline_config.train_config.fine_tune_checkpoint = PRETRAINED_MODEL_PATH+'/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0'\n",
+    "pipeline_config.train_config.fine_tune_checkpoint_type = \"detection\"\n",
+    "pipeline_config.train_input_reader.label_map_path= ANNOTATION_PATH + '/label_map.pbtxt'\n",
+    "pipeline_config.train_input_reader.tf_record_input_reader.input_path[:] = [ANNOTATION_PATH + '/train.record']\n",
+    "pipeline_config.eval_input_reader[0].label_map_path = ANNOTATION_PATH + '/label_map.pbtxt'\n",
+    "pipeline_config.eval_input_reader[0].tf_record_input_reader.input_path[:] = [ANNOTATION_PATH + '/test.record']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "244440b4",
+   "metadata": {},
+   "source": [
+    "The modified entries of the _pipeline.config_ file are then written onto the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "4049d587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_text = text_format.MessageToString(pipeline_config)                                                                                                                                                                                                        \n",
+    "with tf.io.gfile.GFile(CONFIG_PATH, \"wb\") as f:                                                                                                                                                                                                                     \n",
+    "    f.write(config_text)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5686c2a8",
+   "metadata": {},
+   "source": [
+    "# Model Training  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5889d081",
+   "metadata": {},
+   "source": [
+    "The following code box will print out a command.  \n",
+    "It must be run in a shell located at the root directory of the project.  \n",
+    "\n",
+    "It is highly suggested to configure a GPU for training, as doing so will speed up by a significant margin the computation time, although this is not strictly necessary. Detailed instructions for installing the Tensorflow Object Detection API can be found on the [TF Object Detection API Installation Tutorial page](https://tensorflow-object-detection-api-tutorial.readthedocs.io/en/latest/install.html).  \n",
+    "\n",
+    "The number of training steps can be configured by changing the _--num\\_train\\_steps_ value.  \n",
+    "In our case, we trained the model onto a machine equipped with an _Intel i5-11600K_ CPU and accelerated through an _NVidia RTX 2060 6GB_ GPU. The process required <time_required> hours to complete the training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "9fbe0637",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python Tensorflow/models/research/object_detection/model_main_tf2.py --model_dir=Tensorflow/Workspace/trained-models/custom_trained_model --pipeline_config_path=Tensorflow/Workspace/trained-models/custom_trained_model/pipeline.config --num_train_steps=40000\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train_steps = 40000\n",
+    "print(\"\"\"python {}/research/object_detection/model_main_tf2.py --model_dir={}/{} --pipeline_config_path={}/{}/pipeline.config --num_train_steps={}\"\"\".format(APIMODEL_PATH, MODEL_PATH, CUSTOM_MODEL_NAME, MODEL_PATH, CUSTOM_MODEL_NAME, num_train_steps))"
    ]
   }
  ],
