--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -658,12 +658,12 @@
    "metadata": {},
    "source": [
     "The following code box will print out a command.  \n",
-    "It must be run in a shell located at the root directory of the project.  \n",
+    "It must be copied and run in a shell located at the root directory of the project.  \n",
     "\n",
     "It is highly suggested to configure a GPU for training, as doing so will speed up by a significant margin the computation time, although this is not strictly necessary. Detailed instructions for installing the Tensorflow Object Detection API can be found on the [TF Object Detection API Installation Tutorial page](https://tensorflow-object-detection-api-tutorial.readthedocs.io/en/latest/install.html).  \n",
     "\n",
     "The number of training steps can be configured by changing the _--num\\_train\\_steps_ value.  \n",
-    "In our case, we trained the model onto a machine equipped with an _Intel i5-11600K_ CPU and accelerated through an _NVidia RTX 2060 6GB_ GPU. The process required <time_required> hours to complete the training."
+    "In our case, the model has been trained onto a machine equipped with an _Intel i5-11600K_ CPU and accelerated through an _NVidia RTX 2060 6GB_ GPU. The process required <time_required> hours to complete the training."
    ]
   },
   {
