Fix pathname bug

--- a/ModelTest.ipynb
+++ b/ModelTest.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
     "import numpy as np\n",
     "\n",
     "# Utility definitions\n",
-    "WORKSPACE_PATH = 'Tensorflow/workspace'\n",
+    "WORKSPACE_PATH = 'Tensorflow/Workspace'\n",
     "ANNOTATION_PATH = WORKSPACE_PATH+'/annotations'\n",
-    "MODEL_PATH = WORKSPACE_PATH+'/models'\n",
-    "PRETRAINED_MODEL_PATH = WORKSPACE_PATH+'/pre-trained-models'\n",
-    "CONFIG_PATH = MODEL_PATH+'/my_ssd_mobnet/pipeline.config'\n",
-    "CHECKPOINT_PATH = MODEL_PATH+'/my_ssd_mobnet/'\n",
+    "MODEL_PATH = WORKSPACE_PATH+'/trained-models'\n",
+    "PRETRAINED_MODEL_PATH = WORKSPACE_PATH+'/pre-trained-model'\n",
+    "CONFIG_PATH = MODEL_PATH+'/custom_trained_model/pipeline.config'\n",
+    "CHECKPOINT_PATH = MODEL_PATH+'/custom_trained_model/'\n",
     "actionMap = {\n",
     "    \"SelectPrevious\" : (\"LeftL\", \"RIndexUp\"),\n",
     "    \"SelectNext\" : (\"LeftL\", \"RIndexDown\"),\n",
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_name = 'ckpt-41'\n",
+    "checkpoint_name = 'ckpt-1'\n",
     "\n",
     "# Load the pipeline.config file and build a detection model\n",
     "configs = config_util.get_configs_from_pipeline_file(CONFIG_PATH)\n",
@@ -109,6 +109,13 @@
     "    detections = detection_model.postprocess(prediction_dict, shapes)\n",
     "    return detections"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +128,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.9"
   },
   "orig_nbformat": 4
