Update ModelTest.ipynb, now supports checkpoint laoding

--- a/ModelTest.ipynb
+++ b/ModelTest.ipynb
@@ -111,6 +111,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detect Gestures in Real-Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The user should be located at a distance of 1 to 1.5 meters from the camera, else the model won't be able to recognize gestures with high enough accuracy.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from queue import Queue\n",
+    "from threading import Thread\n",
+    "import sys\n",
+    "import cv2 \n",
+    "import numpy as np\n",
+    "from IPython.display import clear_output\n",
+    "import tkinter as tk\n",
+    "import ast\n",
+    "import matplotlib\n",
+    "matplotlib.use('Qt5Agg')\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PyQt5 import QtGui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_close(event, cap):\n",
+    "    cap.release()\n",
+    "\n",
+    "# Keyboard interrupt handler\n",
+    "def on_press(event):\n",
+    "    if event.key == 'q':\n",
+    "        print(\"You pressed \" + event.key + \", the program exited\")\n",
+    "        cap.release()\n",
+    "        plt.close('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load labels from the label map\n",
+    "category_index = label_map_util.create_category_index_from_labelmap(ANNOTATION_PATH+'/label_map.pbtxt')\n",
+    "\n",
+    "# Setup camera capture\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "root = tk.Tk()\n",
+    "screen_width = root.winfo_screenwidth()\n",
+    "screen_height = root.winfo_screenheight()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The window is setup through the matplotlib library.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, None]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setup output window\n",
+    "plt.ion()\n",
+    "gui = plt.figure(\"Real-time Sign Detection\", facecolor='#1e1e1e', edgecolor='#1e1e1e')\n",
+    "gui.canvas.mpl_connect(\"close_event\", lambda event: handle_close(event, cap))\n",
+    "gui.canvas.mpl_connect('key_press_event', on_press)\n",
+    "result = None\n",
+    "title_obj = plt.title('Real-time Sign Detection')\n",
+    "plt.setp(title_obj, color='#d4d4d4')         #set the color of title to white"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main camera loop.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You pressed q, the program exited\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Camera loop\n",
+    "while cap.isOpened(): \n",
+    "    ret, frame = cap.read()\n",
+    "    image_np = np.array(frame)\n",
+    "\n",
+    "    # The masked image is then converted to a tensor for object detection\n",
+    "    # The detections dictionary is formatted according to the objectdetectionAPI\n",
+    "    input_tensor = tf.convert_to_tensor(np.expand_dims(image_np, 0), dtype=tf.float32)\n",
+    "    detections = detect_fn(input_tensor)\n",
+    "    num_detections = int(detections.pop('num_detections'))\n",
+    "    detections = {key: value[0, :num_detections].numpy()\n",
+    "                for key, value in detections.items()}\n",
+    "    detections['num_qdetections'] = num_detections\n",
+    "    detections['detection_classes'] = detections['detection_classes'].astype(np.int64)\n",
+    "\n",
+    "    label_id_offset = 1\n",
+    "\n",
+    "    # The bounding boxes of all detected gestures are drawn on top of the original frame\n",
+    "    # with their corresponding label.\n",
+    "    # max_boxes_to_draw=1 doesn't let two overlapping gestures to be recognized at once\n",
+    "    # min_score_thresh=.7 ignores all detections with an accuracy rate lower than 70%\n",
+    "    viz_utils.visualize_boxes_and_labels_on_image_array(\n",
+    "                image_np,\n",
+    "                detections['detection_boxes'],\n",
+    "                detections['detection_classes']+label_id_offset,\n",
+    "                detections['detection_scores'],\n",
+    "                category_index,\n",
+    "                use_normalized_coordinates=True,\n",
+    "                max_boxes_to_draw=5,\n",
+    "                min_score_thresh=.2,\n",
+    "                agnostic_mode=False)\n",
+    "\n",
+    "    # The output is displayed on an interactive window\n",
+    "    image_np = cv2.cvtColor(image_np, cv2.COLOR_BGR2RGB)\n",
+    "    if result is None:\n",
+    "        plt.axis(\"off\")\n",
+    "        result = plt.imshow(image_np)\n",
+    "        plt.title(\"Real-time Sign Detection\")\n",
+    "        plt.show() \n",
+    "    else:\n",
+    "        result.set_data(image_np)\n",
+    "        gui.canvas.draw()\n",
+    "        gui.canvas.flush_events()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
